Fixed notice and lowered color palette controller on mobile phone

--- a/resources/css/palettes.css
+++ b/resources/css/palettes.css
@@ -146,7 +146,7 @@ article button:hover,
 
 @media (max-width: 640px) {
     .palette-selector {
-        top: 10px;
+        top: 70px;
         right: 10px;
         padding: 10px;
     }
